<resources>
    <string name="app_name">Sound Recognition of Animals</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="uta_id">UTA ID</string>
    <string name="profession">Profession</string>
    <string name="save_profile">Save Profile</string>
    <string name="select_image">Select Image</string>
    <string name="back">Back</string>

    <string name="animal_image_description">Animal Image Description</string>

</resources>
